<resources>
    <string name="app_name">HealthApp</string>
    <string name="title_activity_schedular">Schedular</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_caretaker">Caretaker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Cristiano Ronaldo</string>
    <string name="nav_header_subtitle">cronaldo_be17@thapar.edu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="twitterUsername">\@joeytribbiani</string>

    <string name="attach">Upload Prescription</string>
    <string name="info">Edit Info</string>
    <string name="list">Patients List</string>
    <string name="emer">Emergency</string>
    <string name="meeting">Consult a Doctor</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_doctor">Doctor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>