<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/caretaker_nav"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.alarm.ui.home.CaretakerHomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/caretaker_home_fragment" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.alarm.ui.info.InfoFragment"
        android:label="@string/info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/nav_list"
        android:name="com.example.alarm.ui.list.ListFragment"
        android:label="@string/list"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/nav_emergency"
        android:name="com.example.alarm.ui.emergency.EmergencyFragment"
        android:label="@string/emer"
        tools:layout="@layout/fragment_emergency" />

    <fragment
        android:id="@+id/nav_meeting"
        android:name="com.example.alarm.ui.meeting.MeetingFragment"
        android:label="@string/meeting"
        tools:layout="@layout/fragment_meeting" />
</navigation>